[project]
name = 'r8format'
description = 'Retrocomputing 8-bit file format manipulation tools'
version = '0.0.0'
dependencies = []
authors = [
    { name = 'Curt J. Sampson', email = 'cjs@cynic.net' },
    { name = 'Stuart Croy', email = 'stuartcroy@mac.com' },
]

[project.scripts]
#   bastok
basdump         = 'bastok.cli.basdump:main'
blines          = 'bastok.cli.blines:main'
detok           = 'bastok.cli.detok:main'
#   binary
msx-dasm        = 'binary.cli.msx_dasm:main'
#   cmtconv
analyze-cmt     = 'cmtconv.cli.analyze_cmt:main'
cmtconv         = 'cmtconv.cli.cmtconv:main'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['psrc']

[tool.pytest.ini_options]
testpaths = ['psrc']
