[project]
version = '0.0.5'
name = 'r8format'
description = 'Retrocomputing 8-bit file format manipulation tools'
authors = [
    { name = 'Curt J. Sampson', email = 'cjs@cynic.net' },
    { name = 'Stuart Croy', email = 'stuartcroy@mac.com' },
]
readme = 'README.md'
urls.homepage = 'https://github.com/mc68-net/r8format'
urls.source = 'https://github.com/mc68-net/r8format'
urls.tracker = 'https://github.com/mc68-net/r8format/issues'

requires-python = '>=3.6'
dependencies = []

[project.scripts]
#   bastok
basdump         = 'bastok.cli.basdump:main'
blines          = 'bastok.cli.blines:main'
detok           = 'bastok.cli.detok:main'
#   binary
msx-dasm        = 'binary.cli.msx_dasm:main'
#   cmtconv
analyze-cmt     = 'cmtconv.cli.analyze_cmt:main'
cmtconv         = 'cmtconv.cli.cmtconv:main'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages]
find = { where = ['psrc'] }

[tool.setuptools]
py-modules = ['pytest_pt']
#
#   The packages.find specification above, for whatever reason, ignores all
#   top-level modules (i.e., `*.py` files that can be imported).
#
#   We work around this by adding the top-level modules we need to include
#   to `py-modules` above. This configuration directive is mentioned but
#   not documented, but it seems to add additional modules to the list that
#   `packages.find` comes up with.
#
#   Note that these must be Python module names, not filenames.
#

[tool.pytest.ini_options]
testpaths = ['psrc']
